# cookcli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  Package.resolved  Package.swift  README.md  askama.toml  build.sh  docker-compose.yml  docker-entrypoint.sh  inject_frontend.sh  package-lock.json  package.json  playwright.config.ts  research.md  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yaml  test.yml  ui-tests.yml
CookCLI/: main.swift
CookCLI.xcodeproj/: project.pbxproj
Docs/: Forking.md
Public/styles/: main.css
Resources/Views/: base.leaf  hello.leaf
Sources/App/: configure.swift  routes.swift  server.swift
Sources/Catalog/: Catalog.swift  ConfigLoader.swift  CookFileLister.swift
Sources/CookCLI/: CookCLI.swift  Output.swift  main.swift
Sources/Server/: WebServer.swift  inject_frontend.sh
Tests/: LinuxMain.swift
Tests/CookCLITests/: CookCLITests.swift  XCTestManifests.swift
db/eggs/: meta.yml  shopping.yml
db/milk/: shopping.yml
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: README.md  build.md  doctor.md  home_assistant_integration_research.md  import.md  lsp.md  pantry.md  recipe.md  report.md  search.md  seed.md  server.md  shopping-list.md  update.md
docs/plans/: 2026-01-16-combine-duplicate-ingredients-design.md  2026-01-19-recipe-editor-design.md  2026-01-19-recipe-editor-phase1.md  2026-01-19-recipe-editor-phase2.md  2026-01-19-recipe-editor-phase3.md  2026-01-19-recipe-editor-phase4.md  2026-01-21-async-security-fixes.md  2026-02-13-cooking-mode-design.md  2026-02-13-cooking-mode-plan.md  2026-02-27-cookcloud-sync-design.md  2026-02-27-cookcloud-sync-plan.md  2026-03-04-homeassistant-integration-design.md  2026-03-04-homeassistant-integration-plan.md  2026-03-04-homeassistant-integration-research.md  2026-03-07-todays-menu-banner-design.md  2026-03-07-todays-menu-banner-plan.md  2026-04-29-server-auth-plan.md  2026-04-29-server-auth-readonly-design.md
locales/de-DE/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/en-US/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/es-ES/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/eu-ES/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/fr-FR/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/nl-NL/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/sv-SE/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
locales/uk-UA/: common.ftl  pantry.ftl  preferences.ftl  recipes.ftl  shopping.ftl
samples/: Chicken French.cook  Fried Rice.cook  Fruit Basket I.cook  Fruit Basket II.cook  Fruit Basket III.cook
samples/Healthy Plan/: Beetroot, feta & grain salad.cook  Root Vegetable Tray Bake.cook
samples/config/: aisle.conf
scripts/: inject_frontend.sh  inject_seed.sh
seed/: 2 Day Plan.menu  3 day meal plan.mp  Baked Potato Soup.cook  Borsch.cook  Lazy Tomato and Cuke Salad.cook  Neapolitan Pizza.cook  Olivier Salad.cook  Potstickers.cook  README.md  Ratatouille.cook  Risotto.cook  Root Vegetable Tray Bake.cook  Sicilian-style Scottadito Lamb Chops.cook  Snack Basket I.cook  Snack Basket II.cook  Thai Green Curry.cook  Weekly Plan.menu  Zharkoe.cook  inject_seed_command  lamb-chops.cook  simple_test.j2
seed/Breakfast/: Chocolate Toast Delight.cook  Easy Pancakes.cook  Mexican Style Burrito.cook
seed/Breakfasts/: Easy Pancakes.cook  French Breakfast.cook  Irish Breakfast.cook  Mexican Style Burrito.cook  Oats.cook
seed/Freezing/: Pelmeni Dumplings.cook
seed/Fun/: Neapolitan Pizza.cook  Sicilian-style Scottadito Lamb Chops.cook
seed/Lunches/: Spaghetti carbonara.cook  Tuna Salad.cook
seed/Salads/: Beetroot, feta & grain salad.cook  Caprese Salad.cook  Caprese.cook
seed/Shared/: Guacamole.cook  Neapolitan Pizza Dough.cook  Pizza Dough.cook  Red Beans.cook  Vinaigrette.cook
seed/config/: aisle.conf  pantry.conf
seed/reports/: cost.md.jinja  ingredients.md.jinja  ingredients.md.jinja2  recipe-card.md.jinja
src/: args.rs  doctor.rs  import.rs  lib.rs  login.rs  logout.rs  lsp.rs  main.rs  pantry.rs  report.rs  search.rs  seed.rs  shopping_list.rs  units.toml  update.rs  util.rs  version.rs
src/recipe/: image.rs  mod.rs  read.rs
src/server/: async_index.rs  builders.rs  fs_atomic.rs  language.rs  lsp_bridge.rs  mod.rs  shopping_list_store.rs  shopping_list_watcher.rs  templates.rs  ui.rs
src/shopping_list/: mod.rs
src/sync/: device_flow.rs  mod.rs
src/util/: cooklang_to_cooklang.rs  cooklang_to_human.rs  cooklang_to_latex.rs  cooklang_to_md.rs  cooklang_to_schema.rs  cooklang_to_typst.rs  format.rs  mod.rs
src/web/: builders.rs  i18n.rs  language.rs  menus.rs  mod.rs  templates.rs
static/: site.webmanifest
static/css/: cooking-mode.css  custom-styles.css  input.css  styles.css
static/js/: cooking-mode.js  editor.bundle.js  keyboard-shortcuts.js  search.js
templates/: base.html  edit.html  error.html  menu.html  new.html  pantry.html  preferences.html  recipe.html  recipes.html  shopping_list.html
tests/: TEST_CONFIG.md  basic_test.rs  build.rs  cli_integration_test.rs  edge_cases_test.rs  output_formats_test.rs  pantry_test.rs  recipe_test.rs  schema_output_test.rs  shopping_list_test.rs  snapshot_test.rs  spanish_test.rs
tests/common/: mod.rs
tests/e2e/: accessibility.spec.ts  cooking-mode.spec.ts  navigation.spec.ts  pantry.spec.ts  performance.spec.ts  preferences.spec.ts  recipe-display.spec.ts  recipe-scaling.spec.ts  search.spec.ts  shopping-list-live.spec.ts  shopping-list.spec.ts
tests/fixtures/: test-helpers.ts
tests/snapshots/: snapshot_test__doctor_validate_output.snap  snapshot_test__doctor_validate_output.snap.new  snapshot_test__doctor_validate_output@windows.snap  snapshot_test__doctor_validate_output_snapshot.snap  (+25 more)
ui/: .gitignore  README.md  package-lock.json  package.json  rollup.config.js
ui/public/: index.html
(+108 files in other folders)
