[package]
name = "cookcli"
version = "0.20.0"
edition = "2021"
description = "A command-line interface for managing and working with Cooklang recipes"
license = "MIT"
include = ["/src", "/Cargo.toml", "/Cargo.lock", "/README.md", "/templates", "/static", "/seed", "/locales"]
repository = "https://github.com/cooklang/cookcli"
homepage = "https://cooklang.org"
keywords = ["cooklang", "recipes", "cli", "cooking"]
categories = ["command-line-utilities"]

[features]
default = ["self-update"]
self-update = ["dep:self_update"]

[lib]
name = "cookcli"
path = "src/lib.rs"

[[bin]]
name = "cook"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "3"
anstream = "0.6"
anstyle = "1"
anstyle-yansi = "2"
anyhow = "1"
askama = { version = "0.12", features = ["serde-json"] }
askama_axum = "0.4"
axum = { version = "0.7", features = ["ws"] }
camino = { version = "1", features = ["serde1"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
cooklang = { version = "0.17.4", default-features = false, features = ["aisle", "pantry"] }
cooklang-find = { version = "0.5.0" }
cooklang-import = "0.8.7"
cooklang-language-server = "0.1.2"
cooklang-reports = { version = "0.2" }
directories = "6"
fluent = "0.16"
futures-util = "0.3"
fluent-templates = "0.10"
humantime = "2"
mime_guess = "2.0"
once_cell = "1"
open = "5.3"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
rust-embed = "8"
scraper = "0.20"
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"], optional = true }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tabular = { version = "0.2", features = ["ansi-cell"] }
textwrap = { version = "0.16", features = ["terminal_size"] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.5"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = "0.9"
urlencoding = "2"
url = "2.5"
yansi = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml", "json", "filters"] }
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = "0.11"
