[package]
name = "cookcli"
version = "0.28.1"
edition = "2021"
description = "A command-line interface for managing and working with Cooklang recipes"
license = "MIT"
include = ["/src", "/Cargo.toml", "/Cargo.lock", "/README.md", "/templates", "/static", "/seed", "/locales"]
repository = "https://github.com/cooklang/cookcli"
homepage = "https://cooklang.org"
keywords = ["cooklang", "recipes", "cli", "cooking"]
categories = ["command-line-utilities"]

[features]
default = ["self-update", "sync"]
self-update = ["dep:self_update"]
sync = ["dep:cooklang-sync-client", "dep:uuid", "dep:tokio-util", "dep:base64", "dep:libsqlite3-sys"]

[lib]
name = "cookcli"
path = "src/lib.rs"

[[bin]]
name = "cook"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "3"
anstream = "0.6"
anstyle = "1"
anstyle-yansi = "2"
anyhow = "1"
askama = { version = "0.12", features = ["serde-json"] }
askama_axum = "0.4"
axum = { version = "0.7", features = ["ws"] }
camino = { version = "1", features = ["serde1"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
base64 = { version = "0.22", optional = true }
# TODO: swap back to a crates.io version once cooklang/cooklang-rs#93 is released.
cooklang = { path = "../cooklang-rs", default-features = false, features = ["aisle", "pantry", "shopping_list"] }
cooklang-find = { version = "0.5.0" }
cooklang-import = "0.9.3"
cooklang-sync-client = { version = "0.4.11", optional = true }
libsqlite3-sys = { version = "0.35", features = ["bundled"], optional = true }
cooklang-language-server = "0.2.1"
cooklang-reports = { version = "0.2.2" }
directories = "6"
fs2 = "0.4"
fluent = "0.16"
futures-util = "0.3"
fluent-templates = "0.10"
humantime = "2"
mime_guess = "2.0"
open = "5.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = "8"
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"], optional = true }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tabular = { version = "0.2", features = ["ansi-cell"] }
textwrap = { version = "0.16", features = ["terminal_size"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", optional = true }
toml = "0.9.5"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "normalize-path"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unic-langid = "0.9"
urlencoding = "2"
url = "2.5"
uuid = { version = "1", features = ["v4"], optional = true }
yansi = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml", "json", "filters"] }
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
